k8s/api/base/istio/virtualService.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: iris-write-api
spec:
  hosts:
    - placeholder
  gateways:
    - iris/iris-write-api-ingress-gateway
  http:
    - match:
        - uri:
            prefix: /api

      rewrite:
        uriRegexRewrite:
          match: ^/api/?(.*)$
          rewrite: /\1
      route:
        - destination:
            host: iris-write-api
            port:
              number: 3010
